tests/NormalTests/paczka1/fuzzy1/47048957.err
Error in line 1: A661 A661 22,2
Error in line 2: 0Wn S328 94,8
Error in line 6: 3TiJ4 S328 64,2
Error in line 5: 0Wn A661 2,7
Error in line 4: A661 S526 3,6
Error in line 27: EFcG52Bi S526 62,9
Error in line 26: A661 A726 81,0
